add get commit diff api
