# docs/swagger.json
@@ -49,8 +49,14 @@
                     },
                     {
                         "type": "string",
-                        "description": "filter by task tag",
+                        "description": "filter by license tag",
                         "name": "license_tag",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "filter by language tag",
+                        "name": "language_tag",
                         "in": "query"
                     },
                     {
@@ -515,8 +521,14 @@
                     },
                     {
                         "type": "string",
-                        "description": "filter by task tag",
+                        "description": "filter by license tag",
                         "name": "license_tag",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "filter by language tag",
+                        "name": "language_tag",
                         "in": "query"
                     },
                     {
@@ -1291,8 +1303,14 @@
                     },
                     {
                         "type": "string",
-                        "description": "filter by task tag",
+                        "description": "filter by license tag",
                         "name": "license_tag",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "filter by language tag",
+                        "name": "language_tag",
                         "in": "query"
                     },
                     {
@@ -3102,8 +3120,14 @@
                     },
                     {
                         "type": "string",
-                        "description": "filter by task tag",
+                        "description": "filter by license tag",
                         "name": "license_tag",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "filter by language tag",
+                        "name": "language_tag",
                         "in": "query"
                     },
                     {
@@ -5096,6 +5120,99 @@
                 }
             }
         },
+        "/{repo_type}/{namespace}/{name}/commit/{commit_id}": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKey": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Repository"
+                ],
+                "summary": "Get commit diff of repository and data field of response need to be decode with base64",
+                "parameters": [
+                    {
+                        "enum": [
+                            "models",
+                            "datasets",
+                            "codes",
+                            "spaces"
+                        ],
+                        "type": "string",
+                        "description": "models,datasets,codes or spaces",
+                        "name": "repo_type",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "repo owner name",
+                        "name": "namespace",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "repo name",
+                        "name": "name",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "commit id",
+                        "name": "commit_id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "current user name",
+                        "name": "current_user",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/types.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/types.CommitResponse"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request",
+                        "schema": {
+                            "$ref": "#/definitions/types.APIBadRequest"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/types.APIInternalServerError"
+                        }
+                    }
+                }
+            }
+        },
         "/{repo_type}/{namespace}/{name}/commits": {
             "get": {
                 "security": [
@@ -6543,6 +6660,81 @@
                 }
             }
         },
+        "types.CommitMeta": {
+            "type": "object",
+            "properties": {
+                "sha": {
+                    "type": "string"
+                }
+            }
+        },
+        "types.CommitResponse": {
+            "type": "object",
+            "properties": {
+                "author_email": {
+                    "type": "string"
+                },
+                "author_name": {
+                    "type": "string"
+                },
+                "authored_date": {
+                    "type": "string"
+                },
+                "committer_date": {
+                    "type": "string"
+                },
+                "committer_email": {
+                    "type": "string"
+                },
+                "committer_name": {
+                    "type": "string"
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "diff": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
+                },
+                "files": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "id": {
+                    "type": "string"
+                },
+                "message": {
+                    "type": "string"
+                },
+                "parents": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/types.CommitMeta"
+                    }
+                },
+                "stats": {
+                    "$ref": "#/definitions/types.CommitStats"
+                }
+            }
+        },
+        "types.CommitStats": {
+            "type": "object",
+            "properties": {
+                "additions": {
+                    "type": "integer"
+                },
+                "deletions": {
+                    "type": "integer"
+                },
+                "total": {
+                    "type": "integer"
+                }
+            }
+        },
         "types.CreateCodeReq": {
             "type": "object",
             "properties": {
@@ -7258,7 +7450,7 @@
             "type": "object",
             "properties": {
                 "data": {},
-                "message": {
+                "msg": {
                     "type": "string"
                 }
             }
@@ -7267,7 +7459,7 @@
             "type": "object",
             "properties": {
                 "data": {},
-                "message": {
+                "msg": {
                     "type": "string"
                 },
                 "total": {
